# music-api

./: .gitignore  README.md  backend_schemat.excalidraw  pyproject.toml
app/: main.py
app/config/: __init__.py  logger.py
app/database/: database.py
app/models/: __init__.py  create_models.py  genre.py  preference.py  preference_genre.py  song.py  song_genre.py  song_preference.py
app/routers/: __init__.py  preferences.py  songs.py
app/services/: insert_data.py
