[project]
name = "music-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[tool.uv.workspace]
members = [
    "music-api",
]
